--- a/config/all-datasets/eae/s2s/duee.yaml
+++ b/config/all-datasets/eae/s2s/duee.yaml
@@ -47,9 +47,9 @@ generation_num_beams: 4
 predict_with_generate: True 
 ignore_pad_token_for_loss: True 
 
-per_device_train_batch_size: 4
+per_device_train_batch_size: 8
 per_device_eval_batch_size: 32
-gradient_accumulation_steps: 8
+gradient_accumulation_steps: 2
 # eval_accumulation_steps: 4
 learning_rate: 1.0e-4
 weight_decay: 1.0e-5
@@ -70,6 +70,6 @@ save_strategy: epoch
 save_steps: 500
 
 # split inference #
-split_infer: False
+split_infer: True
 split_infer_size: 5000
 
