--- a/config/all-datasets/ed/s2s/duee.yaml
+++ b/config/all-datasets/ed/s2s/duee.yaml
@@ -23,8 +23,8 @@ return_token_type_ids: False
 truncate_seq2seq_output: True 
 
 # model config #
-model_type: LSTM
-model_name_or_path: LSTM
+model_type: lstm
+model_name_or_path: lstm
 hidden_size: 768
 aggregation: none
 
