--- a/config/all-datasets/ed/s2s/duee.yaml
+++ b/config/all-datasets/ed/s2s/duee.yaml
@@ -49,7 +49,7 @@ warmup_ratio: 0.1
 max_grad_norm: 1
 optim: adamw_torch
 
-load_best_model_at_end: False
+load_best_model_at_end: True
 metric_for_best_model: micro_f1 
 greater_is_better: True 
 
