--- a/config/all-datasets/ed/s2s/duee.yaml
+++ b/config/all-datasets/ed/s2s/duee.yaml
@@ -57,7 +57,7 @@ logging_strategy: steps
 logging_steps: 100
 evaluation_strategy: epoch
 eval_steps: 500
-save_strategy: None
+save_strategy: no
 save_steps: 500
 
 # split inference #
