--- a/config/all-datasets/ed/s2s/duee.yaml
+++ b/config/all-datasets/ed/s2s/duee.yaml
@@ -55,7 +55,7 @@ greater_is_better: True
 
 logging_strategy: steps
 logging_steps: 100
-evaluation_strategy: epoch
+evaluation_strategy: 'no'
 eval_steps: 500
 save_strategy: 'no'
 save_steps: 500
