--- a/config/all-datasets/ed/s2s/duee.yaml
+++ b/config/all-datasets/ed/s2s/duee.yaml
@@ -55,10 +55,11 @@ greater_is_better: True
 
 logging_strategy: steps
 logging_steps: 100
-evaluation_strategy: 'no'
+evaluation_strategy: epoch
 eval_steps: 500
-save_strategy: 'no'
+save_strategy: epoch
 save_steps: 500
+save_total_limit: 1
 
 # split inference #
 split_infer: True
