--- a/config/all-datasets/eae/s2s/duee.yaml
+++ b/config/all-datasets/eae/s2s/duee.yaml
@@ -47,8 +47,8 @@ generation_num_beams: 4
 predict_with_generate: True 
 ignore_pad_token_for_loss: True 
 
-per_device_train_batch_size: 1
-per_device_eval_batch_size: 1
+per_device_train_batch_size: 2
+per_device_eval_batch_size: 4
 gradient_accumulation_steps: 2
 # eval_accumulation_steps: 4
 learning_rate: 1.0e-5
@@ -68,6 +68,7 @@ evaluation_strategy: epoch
 eval_steps: 500
 save_strategy: epoch
 save_steps: 500
+save_total_limit: 1
 
 # split inference #
 split_infer: True
