--- a/config/all-datasets/ed/s2s/duee.yaml
+++ b/config/all-datasets/ed/s2s/duee.yaml
@@ -12,10 +12,10 @@ test_exists_labels: False
 
 # file path # 
 output_dir: output/DuEE1.0
-type2id_path: ../../data/processed/DuEE1.0/label2id.json
-train_file: ../../data/processed/DuEE1.0/train.unified.jsonl
-validation_file: ../../data/processed/DuEE1.0/valid.unified.jsonl
-test_file: ../../data/processed/DuEE1.0/test.unified.jsonl
+type2id_path: /kaggle/input/dueeoriginal/DuEE1.0/label2id.json
+train_file: /kaggle/input/dueeoriginal/DuEE1.0/train.unified.jsonl
+validation_file:  /kaggle/input/dueeoriginal/DuEE1.0/valid.unified.jsonl
+test_file:  /kaggle/input/dueeoriginal/DuEE1.0/test.unified.jsonl
 
 # config for data processor #
 truncate_in_batch: True 
@@ -29,7 +29,7 @@ hidden_size: 768
 aggregation: none
 
 # training config #
-num_train_epochs: 1
+num_train_epochs: 10
 max_seq_length: 200
 max_out_length: 128
 dataloader_num_workers: 1
@@ -44,7 +44,7 @@ per_device_eval_batch_size: 2
 gradient_accumulation_steps: 2
 # eval_accumulation_steps: 4
 learning_rate: 1.0e-4
-weight_decay: 1.0e-5
+weight_decay: 1.0e-4
 warmup_ratio: 0.1 
 max_grad_norm: 1
 optim: adamw_torch
@@ -62,5 +62,5 @@ save_steps: 500
 save_total_limit: 1
 
 # split inference #
-split_infer: True
+split_infer: False
 split_infer_size: 200
