--- a/config/all-datasets/eae/s2s/duee.yaml
+++ b/config/all-datasets/eae/s2s/duee.yaml
@@ -11,11 +11,11 @@ test_exists_labels: False
 
 # file path #
 output_dir: output/DuEE1.0
-type2id_path: ../../data/processed/DuEE1.0/label2id.json
-role2id_path: ../../data/processed/DuEE1.0/role2id.json
-train_file: ../../data/processed/DuEE1.0/train.unified.jsonl
-validation_file: ../../data/processed/DuEE1.0/valid.unified.jsonl
-test_file: ../../data/processed/DuEE1.0/test.unified.jsonl
+type2id_path: /kaggle/input/dueeoriginal/DuEE1.0/label2id.json
+role2id_path: /kaggle/input/dueeoriginal/DuEE1.0/role2id.json
+train_file: /kaggle/input/dueeoriginal/DuEE1.0/train.unified.jsonl
+validation_file: /kaggle/input/dueeoriginal/DuEE1.0/valid.unified.jsonl
+test_file: /kaggle/input/dueeoriginal/DuEE1.0/test.unified.jsonl
 
 # event detection predictions
 golden_trigger: True 
@@ -47,8 +47,8 @@ generation_num_beams: 4
 predict_with_generate: True 
 ignore_pad_token_for_loss: True 
 
-per_device_train_batch_size: 2
-per_device_eval_batch_size: 2
+per_device_train_batch_size: 1
+per_device_eval_batch_size: 4
 gradient_accumulation_steps: 2
 # eval_accumulation_steps: 4
 learning_rate: 1.0e-5
@@ -71,6 +71,6 @@ save_steps: 500
 save_total_limit: 1
 
 # split inference #
-split_infer: True
+split_infer: False
 split_infer_size: 500
 
