--- a/config/all-datasets/ed/sl/duee.yaml
+++ b/config/all-datasets/ed/sl/duee.yaml
@@ -32,10 +32,10 @@ aggregation: none
 num_train_epochs: 20
 max_seq_length: 200
 max_out_length: 200
-dataloader_num_workers: 2
+dataloader_num_workers: 1
 
-per_device_train_batch_size: 32
-per_device_eval_batch_size: 32
+per_device_train_batch_size: 2
+per_device_eval_batch_size: 2
 gradient_accumulation_steps: 1
 # eval_accumulation_steps: 4
 learning_rate: 5.0e-5
@@ -54,6 +54,7 @@ evaluation_strategy: epoch
 eval_steps: 500
 save_strategy: epoch
 save_steps: 500
+save_total_limit: 1
 
 # split inference #
 split_infer: True
